[package]
name = "inox2d"
description = "Officially supported native Rust reimplementation of Inochi2D."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber"]
categories = ["graphics", "rendering"]

[dependencies]
bytemuck = "1.12.3"
encase = { version = "0.4.1", features = ["glam"] }
glam = { version = "0.22.0", features = ["bytemuck"] }
glow = { version = "0.11.2", optional = true }
image = "0.24.5"
indextree = { version = "4.5.0" }
json = "0.12.4"
owo-colors = { version = "3.5.0", optional = true }
pollster = { version = "0.2.5", optional = true }
rayon = "1.6.1"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = { version = "0.15.0", optional = true }

[dev-dependencies]
clap = { version = "4.0.26", features = ["derive"] }
glutin = "0.30.3"
glutin-winit = "0.2.1"
raw-window-handle = "0.5.0"
winit = "0.27.5"


[features]
default = ["opengl", "parallel-tex-dec"]
opengl = ["dep:glow"]
wgpu = ["dep:wgpu", "dep:pollster"]
owo = ["dep:owo-colors"]
parallel-tex-dec = []

[[example]]
name = "render_opengl"
required-features = ["opengl"]

[[example]]
name = "render_wgpu"
required-features = ["wgpu"]
