[package]
name = "inox2d"
description = "Officially supported native Rust reimplementation of Inochi2D."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber"]
categories = ["graphics", "rendering"]

[dependencies]
bytemuck = { version = "1.13.1", optional = true }
encase = { version = "0.5.0", features = ["glam"], optional = true }
glam = "0.23.0"
glow = { version = "0.12.1", optional = true }
image = "0.24.5"
indextree = "4.6.0"
json = "0.12.4"
owo-colors = { version = "3.5.0", optional = true }
pollster = { version = "0.3.0", optional = true }
rayon = "1.7.0"
thiserror = "1.0.39"
tracing = "0.1.37"
wgpu = { version = "0.16.0", optional = true }

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
glutin = "0.30.6"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.1"
tracing-subscriber = "0.3.16"
winit = "0.28.2"


[features]
default = ["opengl"]
opengl = ["dep:glow"]
wgpu = ["dep:wgpu", "dep:pollster", "dep:encase", "dep:bytemuck", "glam/bytemuck"]
owo = ["dep:owo-colors"]

[[example]]
name = "render_opengl"
required-features = ["opengl"]

[[example]]
name = "render_wgpu"
required-features = ["wgpu"]
