[package]
name = "inox2d-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full", "extra-traits"] }
