[package]
name = "inox2d-opengl"
description = "OpenGL renderer for Inox2D"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber", "opengl"]
categories = ["graphics", "rendering"]

[dependencies]
image = "0.24.5"
inox2d = { path = "../inox2d" }
glam = "0.24.0"
glow = { version = "0.12.1" }
thiserror = "1.0.39"
tracing = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
glutin = "0.30.6"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.1"

[dev-dependencies]
tracing-subscriber = "0.3.16"
winit = "0.28.2"
