[package]
name = "inox2d-wgpu"
description = "WGPU renderer for Inox2D"
authors = ["carbonatiuman"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber", "wgpu"]
categories = ["graphics", "rendering"]

[dependencies]
inox2d = { path = "../inox2d", version = "0.3.0" }
bytemuck = "1.13.1"
encase = { version = "0.8.0", features = ["glam"] }
glam = { version = "0.25.0", features = ["bytemuck"] }
thiserror = "1.0.39"
tracing = "0.1.37"
wgpu = { version = "0.19.1", features = ["webgl"] }
