[package]
name = "inox2d"
description = "Officially supported native Rust reimplementation of Inochi2D."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber"]
categories = ["graphics", "rendering"]

[dependencies]
glam = "0.24.0"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
indextree = "4.6.0"
json = "0.12.4"
owo-colors = { version = "3.5.0", optional = true }
thiserror = "1.0.39"
tracing = "0.1.37"
ode_solvers = "0.4"

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }

[features]
owo = ["dep:owo-colors"]
