[package]
name = "inox2d"
description = "Officially supported native Rust reimplementation of Inochi2D."
authors = ["Speykious"]
version = "0.3.0"
edition = "2021"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber"]
categories = ["graphics", "rendering"]

[dependencies]
glam = "0.25.0"
image = { version = "0.25.0", default-features = false, features = [
	"png",
	"jpeg",
] }
indextree = "4.6.0"
json = "0.12.4"
owo-colors = { version = "4.0.0", optional = true }
simple-tga-reader = "0.1.0"
thiserror = "1.0.39"
tracing = "0.1.37"

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }

[features]
owo = ["dep:owo-colors"]
