[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.25.0"
inox2d = { path = "../../inox2d" }
tracing = "0.1.40"
winit = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.0.0"
