[package]
name = "render-opengl"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
inox2d = { path = "../../inox2d" }
inox2d-opengl = { path = "../../inox2d-opengl" }

clap = { version = "4.1.8", features = ["derive"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
glow = { version = "0.12.1" }
glutin = "0.31.0"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
winit = "0.28.2"
