[package]
name = "render-opengl"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
inox2d = { path = "../../inox2d" }
inox2d-opengl = { path = "../../inox2d-opengl" }

clap = { version = "4.1.8", features = ["derive"] }
glam = { version = "0.26.0", features = ["bytemuck"] }
glow = { version = "0.13.1" }
glutin = "0.31.2"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
winit = { version = "0.29", features = ["rwh_05"] }
