[package]
name = "render-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
inox2d = { path = "../../inox2d" }
inox2d-wgpu = { path = "../../inox2d-wgpu" }

clap = { version = "4.1.8", features = ["derive"] }
glam = { version = "0.25.0", features = ["bytemuck"] }
pollster = "0.3.0"
raw-window-handle = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.19.1"
